3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

server/c_wiz.c: for command_create() - check to see if 'of' parameter
   is a spell archetype name, and do the right thing if it is.  This
   allows things like 'create rod_heavy of spell_large_lightning'.
   Note that the command_create is still a seriously broken function
   in many regards.
server/rune.c: Fix write_rune() when trying to find the spell in encase
   in the rune - assignment was incorrect, so it always took the last
   matching spell in the players inventory, not the best matching spell.
server/spell_util.c: Change the call to prayer_failure() so that its
   potency is based on how badly short the player is short of grace.  Eg,
   if only 1 point short, potency of 1.  This changes from before where
   the potency was always the difference in mana.
MSW 2004-06-17

server/attack.c: Fix hit_with_arrow() so that it uses the proper map
   when inserting the arrow.
server/c_wiz.c: Add note about brokeness of command_create()
server/spell_effect.c: execute_word_of_recall() - don't attempt recall
   if player isn't on any map.
MSW 2004-06-15

common/object.c
include/define.h
include/player.h
include/sproto.h
server/attack.c
server/c_object.c
server/player.c
server/shop.c
socket/item.c
socket/loop.c
socket/request.c: Remove explicit calls to
    esrv_update_item(UPD_WEIGHT, pl, pl) for player objects. Instead
    send the new weight whenever it changes.
Andreas Kirschbaum 2004-06-13

server/spell_attack.c: cast_destruction() - have it change the skill
   for the caster so that exp is properly awarded.
common/object.c: insert_map_in_ob() - remove CAN_MERGE checks after the