@@ -17,6 +17,11 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+socket/info.c: Replace sprintf() calls with snprintf() - got metalforge
+   crash with apparent buffer overun - going to snprintf should prevent
+   the problem in the future.
+MSW 2004-06-21
+
 server/c_wiz.c: for command_create() - check to see if 'of' parameter
    is a spell archetype name, and do the right thing if it is.  This
    allows things like 'create rod_heavy of spell_large_lightning'.
